app_deploy_consolidate.yml
apiVersion: v1
kind: Service
metadata:
  name: appf
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: appf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appf
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2
  selector:
    matchLabels:
      app: appf
  template:
    metadata:
      labels:
        app: appf
    spec:
      containers:
        - name: appf
          image: CONTAINER_IMAGE
          resources:
            requests:
              cpu: 200m
              memory: 0.5Gi
            limits:
              cpu: 400m
              memory: 1Gi
          securityContext:
            privileged: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8080
      nodeSelector:
        nodegroup-type: tenanttwo-backend-workloads
      tolerations:
        - key: "eks.com/tenantone"


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: appf
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: appf
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: appf
              servicePort: 80
