consolidated_deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: tenant1app
  namespace: tenantone
spec:
  selector:
    app: tenant1app
  type: NodePort
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tenant1app
  labels:
    app: tenant1app
  namespace: tenantone
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tenant1app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tenant1app
    spec:
      containers:
      - image: 682651395775.dkr.ecr.us-east-1.amazonaws.com/tenan-ecrdo-ejizmjpczu6:springapp.master..2019-08-22.02.55.40.ae436947
        imagePullPolicy: Always
        name: tenant1app
        resources:
          requests:
            cpu: 200m
            memory: 0.5Gi
          limits:
            cpu: 400m
            memory: 1Gi
        ports:
        - containerPort: 8080
          protocol: TCP
      nodeSelector:
          nodegroup-type: frontend-workloads-aw
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tenant1-ingress
  namespace: tenantone
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=14400
  labels:
    app: tenant1-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: tenant1app
              servicePort: 80
